@@ -1,3 +1,8 @@
+2009-03-08 Starboy Qi <starboy.qi@gmail.com>
+
+    * Add extcalc, a awesome calculator.
+    * Update fcitx to latest version.
+
 2009-03-08 MA Yue <velly.empire@gmail.com>
 
     * Add Firefox stable repository.
